// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=bb437503fa9c7e9d755d",
    194,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "size": 194,
    },
  ],
  [
    "main.js?var=bb437503fa9c7e9d755d",
    16296,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "size": 16296,
    },
  ],
]
`;

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): errors 1`] = `[]`;

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): warnings 1`] = `[]`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js?ver=bb437503fa9c7e9d755d",
    194,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "size": 194,
    },
  ],
  [
    "main.js?var=bb437503fa9c7e9d755d",
    16296,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "size": 16296,
    },
  ],
]
`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): errors 1`] = `[]`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): warnings 1`] = `[]`;

exports[`"test" option matches snapshot with empty \`test\` value: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=bb437503fa9c7e9d755d",
    194,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4066,
    {
      "compressed": true,
      "immutable": true,
      "size": 4066,
    },
  ],
  [
    "main.js?var=bb437503fa9c7e9d755d",
    16296,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16296,
    },
  ],
]
`;

exports[`"test" option matches snapshot with empty \`test\` value: errors 1`] = `[]`;

exports[`"test" option matches snapshot with empty \`test\` value: warnings 1`] = `[]`;

exports[`"test" option should work when no asset to compress : assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=bb437503fa9c7e9d755d",
    194,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "size": 194,
    },
  ],
  [
    "main.js?var=bb437503fa9c7e9d755d",
    16296,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "size": 16296,
    },
  ],
]
`;

exports[`"test" option should work when no asset to compress : errors 1`] = `[]`;

exports[`"test" option should work when no asset to compress : warnings 1`] = `[]`;
